about section completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div id="nav-bar">
         <nav><a href="#">Home</a></nav>
-        <nav><a href="#blog-section">Blog</a></nav>
+        <nav><a href="#blog-section-posts">Blog</a></nav>
         <nav><a href="#about-section">About</a></nav>
         <nav><a href="#resources-section">Resources</a></nav>
         <nav><a href="#contact-section">Contact</a></nav>
@@ -106,47 +106,58 @@
     </section>
     <section id="about-section">
       <h2>About Me</h2>
-      <div class="scroll-about-pages">
-        <div class="scroll-per-page">
-          <div class="about-img">
-            <img
-              src="/images/about-img.jpg"
-              alt="a man holding a red suitcase and wearing a red veil"
-              width="50%"
-              height="50%"
-            />
-          </div>
-          <div>
-            <p class="about-heading">Who am I?</p>
-            <p class="about-summary">
-              My name is Lagbaja Tamedo and I'm a mental health blogger.
-            </p>
-          </div>
+      <div class="about-me">
+        <div class="about-img">
+          <img
+            src="/images/about-img.jpg"
+            alt="a man holding a red suitcase and wearing a red veil"
+            width="800px"
+            height="1000px"
+          />
         </div>
-        <div class="scroll-per-page">
-          <div class="about-img">
-            <img
-              src="/images/about-img2.jpg"
-              alt="a man holding a red suitcase and wearing a red veil"
-              width="50%"
-              height="50%"
-            />
-          </div>
-          <div>
-            <p class="about-heading">Why do I do this?</p>
-            <p class="about-summary">
-              I realized that hundreds of thousands of Canadian international
-              students like go through similar struggles and challenges when it
-              comes to settling in the new environment, excelling in school,
-              working to make ends meet, and so on. So I decided to create a
-              platform where we can all share our mental struggles and know that
-              "Hey, you are not alone in this".
-            </p>
-          </div>
+        <div class="about-text">
+          <p class="about-heading">Who am I?</p>
+          <p class="about-summary">
+            My name is Lagbaja Tamedo and I'm a mental health blogger. I
+            realized that hundreds of thousands of Canadian international
+            students like go through similar struggles and challenges when it
+            comes to settling in the new environment, excelling in school,
+            working to make ends meet, and so on. So I decided to create a
+            platform where we can all share our mental struggles and know that
+            "Hey, you are not alone in this".
+          </p>
         </div>
       </div>
     </section>
-    <section id="resources-section"></section>
+    <section id="resources-section">
+      <h2>Helpful Resources</h2>
+      <div id="resource-body">
+        <div id="help-list">
+          <span>Websites</span>
+          <ul>
+            <li><a href="https://www.gethelp1.com" target="_blank">www.gethelp1.com</a></li>
+            <li><a href="https://www.gethelp2.com" target="_blank">www.gethelp2.com</a></li>
+            <li><a href="https://www.gethelp3.com" target="_blank">www.gethelp3.com</a></li>
+            <li><a href="https://www.gethelp4.com" target="_blank">www.gethelp4.com</a></li>
+          </ul>
+          <span>Organizations</span>
+          <ul>
+            <li><a href="https://www.organization1.com" target="_blank">www.organization1.com</a></li>
+            <li><a href="https://www.organization2.com" target="_blank">www.organization2.com</a></li>
+            <li><a href="https://www.organization3.com" target="_blank">www.organization3.com</a></li>
+            <li><a href="https://www.organization4.com" target="_blank">www.organization4.com</a></li>
+          </ul>
+          <span>Books</span>
+          <ul>
+            <li><a href="https://www.book1.com" target="_blank">www.book1.com</a></li>
+            <li><a href="https://www.book2.com" target="_blank">www.book2.com</a></li>
+            <li><a href="https://www.book3.com" target="_blank">www.book3.com</a></li>
+            <li><a href="https://www.book4.com" target="_blank">www.book4.com</a></li>
+          </ul>
+        </div>
+        <div id="help-animation"></div>
+      </div>
+    </section>
     <section id="contact-section"></section>
   </body>
 </html>
