all sections completed

--- a/index.html
+++ b/index.html
@@ -135,29 +135,102 @@
         <div id="help-list">
           <span>Websites</span>
           <ul>
-            <li><a href="https://www.gethelp1.com" target="_blank">www.gethelp1.com</a></li>
-            <li><a href="https://www.gethelp2.com" target="_blank">www.gethelp2.com</a></li>
-            <li><a href="https://www.gethelp3.com" target="_blank">www.gethelp3.com</a></li>
-            <li><a href="https://www.gethelp4.com" target="_blank">www.gethelp4.com</a></li>
+            <li>
+              <a href="https://www.gethelp1.com" target="_blank"
+                >www.gethelp1.com</a
+              >
+            </li>
+            <li>
+              <a href="https://www.gethelp2.com" target="_blank"
+                >www.gethelp2.com</a
+              >
+            </li>
+            <li>
+              <a href="https://www.gethelp3.com" target="_blank"
+                >www.gethelp3.com</a
+              >
+            </li>
+            <li>
+              <a href="https://www.gethelp4.com" target="_blank"
+                >www.gethelp4.com</a
+              >
+            </li>
           </ul>
           <span>Organizations</span>
           <ul>
-            <li><a href="https://www.organization1.com" target="_blank">www.organization1.com</a></li>
-            <li><a href="https://www.organization2.com" target="_blank">www.organization2.com</a></li>
-            <li><a href="https://www.organization3.com" target="_blank">www.organization3.com</a></li>
-            <li><a href="https://www.organization4.com" target="_blank">www.organization4.com</a></li>
+            <li>
+              <a href="https://www.organization1.com" target="_blank"
+                >www.organization1.com</a
+              >
+            </li>
+            <li>
+              <a href="https://www.organization2.com" target="_blank"
+                >www.organization2.com</a
+              >
+            </li>
+            <li>
+              <a href="https://www.organization3.com" target="_blank"
+                >www.organization3.com</a
+              >
+            </li>
+            <li>
+              <a href="https://www.organization4.com" target="_blank"
+                >www.organization4.com</a
+              >
+            </li>
           </ul>
           <span>Books</span>
           <ul>
-            <li><a href="https://www.book1.com" target="_blank">www.book1.com</a></li>
-            <li><a href="https://www.book2.com" target="_blank">www.book2.com</a></li>
-            <li><a href="https://www.book3.com" target="_blank">www.book3.com</a></li>
-            <li><a href="https://www.book4.com" target="_blank">www.book4.com</a></li>
+            <li>
+              <a href="https://www.book1.com" target="_blank">www.book1.com</a>
+            </li>
+            <li>
+              <a href="https://www.book2.com" target="_blank">www.book2.com</a>
+            </li>
+            <li>
+              <a href="https://www.book3.com" target="_blank">www.book3.com</a>
+            </li>
+            <li>
+              <a href="https://www.book4.com" target="_blank">www.book4.com</a>
+            </li>
           </ul>
         </div>
-        <div id="help-animation"></div>
+        <div id="help-animation">HELP!!!</div>
       </div>
     </section>
-    <section id="contact-section"></section>
+    <section id="contact-section">
+      <div id="contact-heading">Join the Conversations</div>
+      <div id="contact-subheading">
+        Help extend our reach to students around you
+      </div>
+      <div id="contact-name">
+        <div class="form-inputs">
+          <label for="name"> First Name*</label>
+          <input type="text" name="name" required />
+        </div>
+        <!-- <br> -->
+        <div class="form-inputs">
+          <label for="name"> Last Name</label>
+          <input type="text" name="name" />
+        </div>
+      </div>
+      <div id="contact-email">
+        <div class="form-inputs">
+          <label for="email"> E-mail*</label>
+          <input type="email" name="email" required placeholder="example@abc.com"/>
+        </div>
+      </div>
+      <div id="subscribe-button">
+        <label for="subscribe"></label>
+        <input type="submit" name="subscribe" style="height:50px; width:100px"/>
+      </div>
+    </section>
   </body>
+  <footer id="footer">
+    <p>Inner Peace</p>
+    <p>123-456-7890</p>
+    <p>info@myinnerpeace.com</p>
+    <p>© 2035 By Inner Peace.</p>
+    <p>Powered by Ade</p>
+  </footer>
 </html>
