--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Blog website</title>
-    <link rel="stylesheet" href="/styles.css" />
+    <title>Mental Health Blog website</title>
+    <link rel="stylesheet" href="styles.css" type="text/css" />
   </head>
   <body>
     <section class="menu-bar">
